<resources>
    <string name="app_name">SIAQueue</string>
    <string name="identity_id_test">us-east-1:6cb8b4d2-f81b-4fa2-ba76-5ce5d7f61f0b</string>
    <string name="bot_name">SIACustomerServiceBot</string>
    <string name="bot_alias">SIACS</string>
    <string name="queue_ticket_title">Queue Ticket</string>
    <string name="instruct_text">To serve you better, please select information as below</string>
    <string name="have_krisflyer_text">I have KrisFlyer Number</string>
    <string name="forgot_krisflyer_text">I forgot the KrisFlyer Number</string>
    <string name="continue_button"><![CDATA[Continue>>]]></string>
    <string name="krisflyer_hint">KrisFlyer Number</string>
    <string name="no_krisflyer_text">I have no KrisFlyer Number</string>
    <string name="sia_logo_desc">SIA logo</string>
    <string name="retrieve_krisflyer_text">Retrieve KrisFlyer membership number</string>
    <string name="forgot_krisflyer_number_text">Forgot your KrisFlyer membership number? Complete this form with the information registered on your KrisFlyer account so we can retrieve your KrisFlyer membership number.</string>
    <string name="first_given_name_text">First / Given name*</string>
    <string name="first_name_hint">Eg. John</string>
    <string name="last_family_name_text">Last / Family name*</string>
    <string name="last_name_hint">Eg. Smith</string>
    <string name="date_of_birth_text">Date of birth*</string>
    <string name="day_hint">DD</string>
    <string name="month_hint">MM</string>
    <string name="year_hint">YYYY</string>
    <string name="email_text">Registered Email address*</string>
    <string name="email_hint">Eg. myemail@gmail.com</string>
    <string name="no_krisflyer_header_text">Your personalized information</string>
    <string name="no_krisflyer_sub_text">We would like to serve you better, please let us know about you!</string>
    <string name="title_text">Title*</string>
    <string name="location_text">Location*</string>
    <string name="local_text">Local</string>
    <string name="oversea_text">Oversea</string>
    <string name="age_group_text">Age group*</string>
    <string name="ok_text">OK</string>
    <string name="cancel_text">Cancel</string>
    <string name="confirm_text">We just sent your KrisFlyer Number to you. Please check your email.</string>
    <string name="submit_text">Submit</string>
    <string name="error_email">Please enter a valid email address.</string>
    <string name="date_hint">DD/MM/YYYY</string>
    <string name="error_first_name">Please enter your first name.</string>
    <string name="error_last_name">Please enter your last name.</string>
    <string name="error_dob">Please enter your date of birth.</string>
    <string name="categories_header_text">Your requests</string>
    <string name="categories_sub_text">Please select your request types (multiple types are accepted).</string>
    <string name="confirm_print_text">Your queue ticket is printed.</string>
    <string name="forgot_text">I forgot</string>
    <string name="pnr_hint">PNR</string>
    <string name="error_pnr">Wrong PNR. Please try again.</string>
    <string name="error_krisflyer">Wrong KrisFlyer Number. Please try again.</string>
    <string name="interact_header_text">Interactive request</string>
    <string name="start_text">Tap the mic and say \'hello\' to start!</string>
    <string name="chat_text">Click to chat with me!</string>

    <string-array name="title_array">
        <item>Mr.</item>
        <item>Ms.</item>
    </string-array>

    <string-array name="request_types">
        <item>Reservation / Ticketing</item>
        <item>Schedule / aircraft change</item>
        <item>KrisFlyer / PPS</item>
        <item>Special Handling</item>
        <item>SilkAir</item>
        <item>Travel Agent</item>
        <item>Others</item>
    </string-array>

    <string-array name="reservation_ticketing">
        <item>New Booking</item>
        <item>New Ticket Sales</item>
        <item>Rebook</item>
        <item>Reroute</item>
        <item>Commercial Upgrade</item>
        <item>Name Correction</item>
        <item>Refund</item>
        <item>Refund Appeals</item>
        <item>Round-the-world/Airpasses</item>
        <item>Meal/Seat/Assistance request</item>
        <item>General Fare Enquiries</item>
        <item>Others</item>
    </string-array>

    <string-array name="schedule_aircraft_change">
        <item>Rebook</item>
        <item>Reroute</item>
        <item>Refund</item>
        <item>Compensation</item>
        <item>Others</item>
    </string-array>

    <string-array name="krisflyer_pps">
        <item>Redemption</item>
        <item>Redemption Upgrade</item>
        <item>Redemption Changes</item>
        <item>Redemption Enquiries</item>
        <item>Other Airline Redemption</item>
        <item>Waitlist Matters</item>
        <item>Refunds</item>
        <item>Membership Matters</item>
        <item>Others</item>
    </string-array>

    <string-array name="special_handling">
        <item>Unaccompanied minor</item>
        <item>Medical assistance</item>
        <item>Pets</item>
        <item>Cargo</item>
        <item>Others</item>
    </string-array>

    <string-array name="silkair">
        <item>New Booking</item>
        <item>New Ticket Sales</item>
        <item>Rebook</item>
        <item>Reroute</item>
        <item>Commercial Upgrade</item>
        <item>Name Correction</item>
        <item>Refund</item>
        <item>Refund Appeals</item>
        <item>Letter of Indemnity / Card Verification</item>
        <item>Others</item>
    </string-array>

    <string-array name="travel_agent">
        <item>Rebook</item>
        <item>Reroute</item>
        <item>Commercial Upgrade</item>
        <item>Refund</item>
        <item>Name Correction</item>
        <item>Others</item>
    </string-array>

    <string-array name="others" />

</resources>
