<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.flymetothemoon.siaqueue.activities.InteractActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/interact_activity_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        android:gravity="center_vertical"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/AppTheme">

        <ImageView
            android:layout_width="140dp"
            android:layout_height="80dp"
            android:layout_marginStart="50dp"
            android:contentDescription="@string/sia_logo_desc"
            android:src="@drawable/sia_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/queue_ticket_title"
            android:textColor="@color/white"
            android:textSize="30sp" />

    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/header_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/interact_activity_toolbar"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:text="@string/interact_header_text"
        android:textColor="@color/colorBlue"
        android:textSize="30sp" />

    <LinearLayout
        android:id="@+id/messages_layout"
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/header_text"
        android:layout_marginBottom="40dp"
        android:layout_marginStart="50dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/start_text"
            android:textSize="20sp" />

        <ListView
            android:id="@+id/conversationListView"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:divider="@android:color/transparent"
            android:dividerHeight="10.0sp" />

    </LinearLayout>

    <include
        android:id="@+id/voiceInterface"
        layout="@layout/voice_layout"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_above="@id/space_interactive_voice_component"
        android:layout_centerHorizontal="true" />

    <Space
        android:id="@+id/space_interactive_voice_component"
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_inter_group_separation"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
